<resources>
    <string name="app_name">AQS</string>
    <string name="settings">Настройки</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="ble_devices">Устройства</string>
    
    <string name="notification_title">@string/app_name</string>
    <string name="notification_content">Bluetooth соединение с датчиком качества воздука</string>

    <string name="action_connect">Подключится</string>
    <string name="action_refresh">Перезагрузить</string>
    <string name="action_turn_off">Отключится</string>
    <string name="action_remove_locale">Очистить локально</string>
    <string name="action_remove_all">Очистить везде</string>

    <string name="paired_devices">Подключенные устройства</string>
    <string name="database">База данных</string>
    <string name="no_data">Нет данных</string>
    <string name="locale_db_size">Размер локального хранилища:</string>
    <string name="last_log_id">Номер последней записи:</string>
    <string name="last_time">Время последней записи:</string>

    <string name="state_connecting">Подключение…</string>
    <string name="state_connected">Подключено</string>
    <string name="state_online">Online</string>
    <string name="state_offline">Offline</string>

    <string name="error_bluetooth_unavailable">Невозоможно подключиться к Bluetooth</string>
    <string name="error_device_connection">Ошибка подключения</string>

    <string name="temperature">Температура</string>
    <string name="humidity">Влажность</string>
    <string name="co2">co2</string>
    <string name="pm1">pm1</string>
    <string name="pm10">pm10</string>
    <string name="pm25">pm2.5</string>
    <string name="tvoc">tvoc</string>

    <string name="sensor_val">%1$s: %2$.2f</string>

    <string name="temperature_val">%1$.2f °C</string>
    <string name="humidity_val">%1$.2f%%</string>
    <string name="co2_val">%1$.2f ppm</string>
    <string name="pm1_val">%1$.2f мкг/м³</string>
    <string name="pm10_val">%1$.2f мкг/м³</string>
    <string name="pm25_val">%1$.2f мкг/м³</string>
    <string name="tvoc_val">%1$.2f мкг/м³</string>

    <string name="temperature_units">°C от времени</string>
    <string name="humidity_units">% от времени</string>
    <string name="co2_units">ppm от времени</string>
    <string name="pm1_units">мкг/м³ от времени</string>
    <string name="pm10_units">мкг/м³ от времени</string>
    <string name="pm25_units">мкг/м³ от времени</string>
    <string name="tvoc_units">мкг/м³ от времени</string>
    
    <string name="count_percent">%1$d%%</string>
    <string name="count_item_of">%1$d/%2$d</string>
    <string name="menu_navigation">Навигация</string>

</resources>
