<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_connect"
        android:icon="@drawable/ic_connect"
        android:orderInCategory="2"
        android:title="@string/action_connect"
        android:visible="false"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_turn_off"
        android:icon="@drawable/ic_turn_off"
        android:orderInCategory="4"
        android:visible="false"
        android:title="@string/action_turn_off"
        app:showAsAction="ifRoom" />
</menu>