<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sensors"
            type="com.e.btex.data.entity.Sensors" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="16dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        
        <TextView
            android:id="@+id/value_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mini"
            android:layout_marginEnd="@dimen/margin_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{sensors.timeText}"
            tools:text="15:12 12.08.2008"/>

        <ImageView
            android:id="@+id/image_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:src="@drawable/ic_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_time" />

        <TextView
            android:id="@+id/label_temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:text="@string/temperature"
            app:layout_constraintBottom_toBottomOf="@+id/image_temperature"
            app:layout_constraintStart_toEndOf="@+id/image_temperature"
            app:layout_constraintTop_toTopOf="@+id/image_temperature" />

        <TextView
            android:id="@+id/value_temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:text="@{@string/temperature_val(sensors.temperature)}"
            app:layout_constraintBottom_toBottomOf="@+id/image_temperature"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/image_temperature"
            tools:text="25" />

        <ImageView
            android:id="@+id/image_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/spacing_mini"
            android:src="@drawable/ic_humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_co2" />

        <TextView
            android:id="@+id/label_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:text="@string/humidity"
            app:layout_constraintBottom_toBottomOf="@+id/image_humidity"
            app:layout_constraintStart_toEndOf="@+id/image_humidity"
            app:layout_constraintTop_toTopOf="@+id/image_humidity" />

        <TextView
            android:id="@+id/value_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{@string/humidity_val(sensors.humidity)}"
            app:layout_constraintBottom_toBottomOf="@+id/image_humidity"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/image_humidity"
            tools:text="Temperature: 25" />

        <ImageView
            android:id="@+id/image_co2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/spacing_mini"
            android:src="@drawable/ic_co2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_temperature" />

        <TextView
            android:id="@+id/label_co2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:text="@string/co2"
            app:layout_constraintBottom_toBottomOf="@+id/image_co2"
            app:layout_constraintStart_toEndOf="@+id/image_co2"
            app:layout_constraintTop_toTopOf="@+id/image_co2" />

        <TextView
            android:id="@+id/value_co2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:text="@{@string/co2_val(sensors.co2)}"
            app:layout_constraintBottom_toBottomOf="@+id/image_co2"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/image_co2"
            tools:text="455" />

        <ImageView
            android:id="@+id/image_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/spacing_mini"
            android:src="@drawable/ic_pm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_humidity" />

        <TextView
            android:id="@+id/label_pm1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:text="@string/pm1"
            app:layout_constraintBottom_toBottomOf="@+id/image_pm"
            app:layout_constraintStart_toEndOf="@+id/image_pm"
            app:layout_constraintTop_toTopOf="@+id/image_pm" />

        <TextView
            android:id="@+id/value_pm1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:text="@{@string/pm1_val(sensors.pm1)}"
            app:layout_constraintBottom_toBottomOf="@+id/image_pm"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/image_pm"
            tools:text="1" />

        <TextView
            android:id="@+id/label_pm25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:layout_marginTop="@dimen/spacing_mini"
            android:text="@string/pm25"
            app:layout_constraintStart_toEndOf="@+id/image_pm"
            app:layout_constraintTop_toBottomOf="@+id/label_pm1" />

        <TextView
            android:id="@+id/value_pm25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:layout_marginTop="@dimen/spacing_mini"
            android:text="@{@string/pm25_val(sensors.pm25)}"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/label_pm1"
            tools:text="0" />

        <TextView
            android:id="@+id/label_pm10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:layout_marginTop="@dimen/spacing_mini"
            android:text="@string/pm10"
            app:layout_constraintStart_toEndOf="@+id/image_pm"
            app:layout_constraintTop_toBottomOf="@+id/label_pm25" />

        <TextView
            android:id="@+id/value_pm10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:layout_marginTop="@dimen/spacing_mini"
            android:text="@{@string/pm10_val(sensors.pm10)}"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/label_pm25"
            tools:text="0" />

        <ImageView
            android:id="@+id/image_tvoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/spacing_mini"
            android:layout_marginBottom="@dimen/margin_normal"
            android:src="@drawable/ic_tvoc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_pm10" />

        <TextView
            android:id="@+id/label_tvoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:text="@string/tvoc"
            app:layout_constraintBottom_toBottomOf="@+id/image_tvoc"
            app:layout_constraintStart_toEndOf="@+id/image_tvoc"
            app:layout_constraintTop_toTopOf="@+id/image_tvoc" />

        <TextView
            android:id="@+id/value_tvoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_mini"
            android:text="@{@string/tvoc_val(sensors.tvoc)}"
            app:layout_constraintBottom_toBottomOf="@+id/image_tvoc"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/image_tvoc" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="label_temperature,label_humidity,label_pm25,label_pm10,label_tvoc,label_co2,label_pm1"
            tools:layout_editor_absoluteX="411dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>